# research-paper-ai

./: README.md  ai_researcher.py  ai_researcher2.py  arxiv_tool.py  frontend.py  plagiarism_tool.py  pyproject.toml  read_pdf.py
output/: methodology_20260303_134424  paper_20260302_154702.tex
reseach-paper-ai/: ai_researcher.py  ai_researcher2.py  arxiv_tool.py  frontend.py  model.py  plagiarism_tool.py  pyproject.toml  read_pdf.py  test_research.py  write_pdf.py
